--- a/Escalante.mw
+++ b/Escalante.mw
@@ -3,4 +3,4 @@
 Say '''Escalante''' et kumapat ya klase siyudad ed luyag na [[Negros Occidental]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 94,070 totoo. <br> 	
 Walay kabaleg tan sukat to ya 192.76 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 6124. 			
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
