--- a/Gingoog.mw
+++ b/Gingoog.mw
@@ -3,4 +3,4 @@
 Say '''Gingoog''' et kumadwa ya klase siyudad ed luyag na [[Misamis Oriental]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 124,648 totoo. <br> 	
 Walay kabaleg tan sukat to ya 568.44 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 9014. 			
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
