--- a/Himamaylan.mw
+++ b/Himamaylan.mw
@@ -3,4 +3,4 @@
 Say '''Himamaylan''' et kumatlo ya klase siyudad ed luyag na [[Negros Occidental]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 106,880 totoo. <br> 	
 Walay kabaleg tan sukat to ya 367.04 sq. km. Sikato et walad  kumalima ya distrito. Say zip code to et 6108. 			
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
