--- a/Kabankalan.mw
+++ b/Kabankalan.mw
@@ -3,4 +3,4 @@
 Say '''Kabankalan''' et unaan ya klase siyudad ed luyag na [[Negros Occidental]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 181,977 totoo. <br> 	
 Walay kabaleg tan sukat to ya 697.35 sq. km. Sikato et walad  kumanem ya distrito. Say zip code to et 6111. 			
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
