--- a/Las_Piñas.mw
+++ b/Las_Piñas.mw
@@ -3,4 +3,4 @@
 Say '''Las Piñas''' et unaan ya klase siyudad ed luyag na [[Metro Manila]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 552,573 totoo. <br> 	
 Walay kabaleg tan sukat to ya 32.69 sq. km. Sikato et walad  alenleneg ya distrito. Say zip code to et 1740 (CPO). 			
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
