--- a/Lipa.mw
+++ b/Lipa.mw
@@ -3,4 +3,4 @@
 Say '''Lipa''' et unaan ya klase siyudad ed luyag na [[Batangas]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 283,468 totoo. <br> 	
 Walay kabaleg tan sukat to ya 209.40 sq. km. Sikato et walad  kumapat ya distrito. Say zip code to et 4217. 			
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
