--- a/Mandaue.mw
+++ b/Mandaue.mw
@@ -7,4 +7,4 @@ Walay kabaleg tan sukat to ya 25.18 sq. km. Sikato et walad  kumanem ya distrito
 
 {{Cebu}}
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
