--- a/Manila.mw
+++ b/Manila.mw
@@ -76,4 +76,4 @@ Image:Philippine General Hospital.JPG|[[Ospital Heneral diad Pilipino]]
 {{Metro Manila}}
 {{Filipinas}}
 
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
