--- a/Navotas.mw
+++ b/Navotas.mw
@@ -3,4 +3,4 @@
 Say '''Navotas''' et kumadwa ya klase siyudad ed luyag na [[Metro Manila]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 249,131 totoo. <br> 	
 Walay kabaleg tan sukat to ya 10.77 sq. km. Sikato et walad  alenleneg ya distrito. Say zip code to et 1485 (CPO). 			
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
