--- a/Oroquieta.mw
+++ b/Oroquieta.mw
@@ -3,4 +3,4 @@
 Say '''Oroquieta''' et kumapat ya klase siyudad ed luyag na [[Misamis Occidental]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 70,757 totoo. <br> 	
 Walay kabaleg tan sukat to ya 237.88 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 7207. 			
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
