--- a/Parañaque.mw
+++ b/Parañaque.mw
@@ -3,4 +3,4 @@
 Say '''Parañaque''' et unaan ya klase siyudad ed luyag na [[Metro Manila]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 588,126 totoo. <br> 	
 Walay kabaleg tan sukat to ya 47.69 sq. km. Sikato et walad  unaan ag kumadwa ya distrito. Say zip code to et 1700 (CPO). 			
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
