--- a/Sagay.mw
+++ b/Sagay.mw
@@ -3,4 +3,4 @@
 Say '''Sagay''' et kumatlo ya klase siyudad ed luyag na [[Negros Occidental]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 146,264 totoo. <br> 	
 Walay kabaleg tan sukat to ya 330.34 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 6122. 			
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
