--- a/Silay.mw
+++ b/Silay.mw
@@ -3,4 +3,4 @@
 Say '''Silay''' et kumatlo ya klase siyudad ed luyag na [[Negros Occidental]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 126,930 totoo. <br> 	
 Walay kabaleg tan sukat to ya 214.80 sq. km. Sikato et walad  kumatlo ya distrito. Say zip code to et 6116. 			
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
