--- a/Siyudad_na_Batangas.mw
+++ b/Siyudad_na_Batangas.mw
@@ -3,4 +3,4 @@
 Say '''Siyudad na Batangas''' et unaan ya klase siyudad ed luyag na [[Batangas]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 329,874 totoo. <br> 	
 Walay kabaleg tan sukat to ya 282.96 sq. km. Sikato et walad  kumatlo ya distrito. Say zip code to et 4232. 			
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
