--- a/Siyudad_na_Davao.mw
+++ b/Siyudad_na_Davao.mw
@@ -3,4 +3,4 @@
 Say '''Siyudad na Davao''' et unaan ya klase siyudad ed luyag na [[Davao del Sur]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 1,449,296 totoo. <br> 	
 Walay kabaleg tan sukat to ya 2,443.61 sq. km. Sikato et walad  unaan ag kumatlo ya distrito. Say zip code to et 8000. 			
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
