--- a/Siyudad_na_Surigao.mw
+++ b/Siyudad_na_Surigao.mw
@@ -3,4 +3,4 @@
 Say '''Siyudad na Surigao''' et kumatlo ya klase siyudad ed luyag na [[Surigao del Norte]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 140,540 totoo. <br> 	
 Walay kabaleg tan sukat to ya 245.30 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 8400. 			
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
