--- a/Tayabas.mw
+++ b/Tayabas.mw
@@ -3,4 +3,4 @@
 Say '''Siyudad na Tayabas''' et kumanem ya klase siyudad ed luyag na [[Quezon]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 91,428 totoo. <br> 	
 Walay kabaleg tan sukat to ya 230.95 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 4327. 			
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
