--- a/Talisay,_Negros_Occidental.mw
+++ b/Talisay,_Negros_Occidental.mw
@@ -3,4 +3,4 @@
 Say '''Talisay, Negros Occidental''' et kumapat ya klase siyudad ed luyag na [[Negros Occidental]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 102,214 totoo. <br> 	
 Walay kabaleg tan sukat to ya 201.18 sq. km. Sikato et walad  kumatlo ya distrito. Say zip code to et 6115. 			
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
