--- a/Tangub.mw
+++ b/Tangub.mw
@@ -3,4 +3,4 @@
 Say '''Tangub''' et kumapat ya klase siyudad ed luyag na [[Misamis Occidental]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 63,011 totoo. <br> 	
 Walay kabaleg tan sukat to ya 162.78 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 7214. 			
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
