--- a/Valenzuela.mw
+++ b/Valenzuela.mw
@@ -3,4 +3,4 @@
 Say '''Valenzuela''' et unaan ya klase siyudad ed luyag na [[Metro Manila]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 575,356 totoo. <br> 	
 Walay kabaleg tan sukat to ya 47.02 sq. km. Sikato et walad  unaan ag kumadwa ya distrito. Say zip code to et 1440 (CPO). 			
 									
-[[Category:Siyudad ed Pilipinas]]
+[[Category:Saray siyudad na Filipinas]]
