--- a/Albay.mw
+++ b/Albay.mw
@@ -5,7 +5,7 @@
 Say '''Albay''' et unaan ya klase luyag na [[Bicol Region]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 1,314,826 totoo. <br>
 Walay kabaleg tan sukat to ya  2,575.77 kilometro kuwadrado. Say dialling code to et 52. Say kapital to et Legazpi.  
         
-[[Category: Saray luyag na Pilipinas]]        
+[[Category:Saray luyag na Filipinas]]        
         
 
 ==Saray siyudad san baley==
