--- a/Bataan.mw
+++ b/Bataan.mw
@@ -5,7 +5,7 @@
 Say '''Bataan''' et unaan ya klase luyag na [[Central Luzon]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 760,650 totoo. <br>
 Walay kabaleg tan sukat to ya  1,372.98 kilometro kuwadrado. Say dialling code to et 47. Say kapital to et Balanga.  
         
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
 
 == Saray baley ==
 <table border="0"><tr>
