--- a/Batangas.mw
+++ b/Batangas.mw
@@ -5,7 +5,7 @@
 Say '''Batangas''' et unaan ya klase luyag na [[Calabarzon]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 2,694,335 totoo. <br>
 Walay kabaleg tan sukat to ya  3,119.72 kilometro kuwadrado. Say dialling code to et 43. Say kapital to et Siyudad na Batangas.  
         
-[[Category: Saray luyag na Pilipinas]]  
+[[Category:Saray luyag na Filipinas]]  
 
 ====Ciudad====
 
