--- a/Catanduanes.mw
+++ b/Catanduanes.mw
@@ -5,7 +5,7 @@
 Say '''Catanduanes''' et kumatlo ya klase luyag na [[Bicol Region]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 260,964 totoo. <br>
 Walay kabaleg tan sukat to ya  1,492.16 kilometro kuwadrado. Say dialling code to et 52. Say kapital to et Virac.  
         
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
 
 ==Saray baley==
 
