--- a/Cebu.mw
+++ b/Cebu.mw
@@ -5,7 +5,7 @@
 Say '''Cebu''' et unaan ya klase luyag na [[Central Visayas]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 2,619,362 totoo. <br>
 Walay kabaleg tan sukat to ya  5,342.00 kilometro kuwadrado. Say dialling code to et 32. Say kapital to et Siyudad na Cebu.  
         
-[[Category: Saray luyag na Pilipinas]] 
+[[Category:Saray luyag na Filipinas]] 
 
 == Heyografiya ==
 
