--- a/Ifugao.mw
+++ b/Ifugao.mw
@@ -37,4 +37,4 @@ Say Ifugao walay 11 ya baley.
 
 {{Luzon lateral}}
 
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
