--- a/La_Union.mw
+++ b/La_Union.mw
@@ -48,4 +48,4 @@ Say La Union walay 1 ya siyudad san 19 ya baley.
 
 {{Luzon lateral}}
 
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
