--- a/Maguindanao.mw
+++ b/Maguindanao.mw
@@ -5,4 +5,4 @@
 Say '''Maguindanao''' et unaan ya klase luyag na [[Autonomous Region in Muslim Mindanao]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 944,718 totoo. <br>
 Walay kabaleg tan sukat to ya  6,146.53 kilometro kuwadrado. Say dialling code to et 64. Say kapital to et Shariff Aguak.  
         
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
