--- a/Template:Occidental_Mindoro.mw
+++ b/Template:Occidental_Mindoro.mw
@@ -1,10 +1,21 @@
-<div style="text-align: center; clear:both; margin: 1.5em 0em">
-{| id="toc" style="margin: auto; line-height: 1.5; font-size: smaller; text-align: left;"
-|-
-| colspan="2" style="background:#ccccff; font-size: larger;" align="center" | '''Saray [[Baley]] na [[Mindoro ed Sagor]]'''
-|-
-|style="padding:0px 5px"; align="center"| [[Abra de Ilog, Occidental Mindoro|Abra de Ilog]] | [[Calintaan, Occidental Mindoro|Calintaan]] | [[Looc, Occidental Mindoro|Looc]] | [[Lubang, Occidental Mindoro|Lubang]] | [[Magsaysay, Occidental Mindoro|Magsaysay]] | [[Mamburao, Occidental Mindoro|Mamburao]] | [[Paluan, Occidental Mindoro|Paluan]] | [[Rizal, Occidental Mindoro|Rizal]] | [[Sablayan, Occidental Mindoro|Sablayan]] | [[San Jose, Occidental Mindoro|San Jose]] | [[Santa Cruz, Occidental Mindoro|Santa Cruz]]
-|}
-</div>
-<noinclude>
+{{Navbox
+|name = Occidental Mindoro
+|title = Saray [[:Category:Saray baley na Filipinas|baley]] na [[Occidental Mindoro]]
+|state = {{{state|autocollapse}}}
+|listclass = hlist
+|group1 = Saray baley
+|list1 = 
+* [[Abra de Ilog, Occidental Mindoro|Abra de Ilog]]
+* [[Calintaan, Occidental Mindoro|Calintaan]]
+* [[Looc, Occidental Mindoro|Looc]]
+* [[Lubang, Occidental Mindoro|Lubang]]
+* [[Magsaysay, Occidental Mindoro|Magsaysay]]
+* [[Mamburao]]
+* [[Paluan, Occidental Mindoro|Paluan]]
+* [[Rizal, Occidental Mindoro|Rizal]]
+* [[Sablayan, Occidental Mindoro|Sablayan]]
+* [[San Jose, Occidental Mindoro|San Jose]]
+* [[Santa Cruz, Occidental Mindoro|Santa Cruz]]
+}}<noinclude>
+[[Category:Saray baley na Occidental Mindoro| ]]
 </noinclude>
