--- a/Template:Oriental_Mindoro.mw
+++ b/Template:Oriental_Mindoro.mw
@@ -1,14 +1,27 @@
-<div style="text-align: center; clear:both; margin: 1.5em 0em">
-{| id="toc" style="margin: auto; line-height: 1.5; font-size: smaller; text-align: left;"
-|-
-| colspan="2" style="background:#ccccff; font-size: larger;" align="center" | '''Saray [[Siyudad]] san [[Baley]] na [[Oriental Mindoro]]'''
-|-
-|style="padding:0px 5px" align="right"|'''Siyudad:''' 
-|style="padding:0px 5px" | [[Calapan]]  
-|-
-|style="padding:0px 5px" align="right"|'''Saray Baley:''' 
-|style="padding:0px 5px" | [[Baco]] | [[Bansod]] | [[Bongabong]] | [[San Pedro (Mindoro)|Bulalacao]] | [[Gloria (baley)|Gloria]] | [[Mansalay]] | [[Nauhan]] | [[Pinamalayan]] | [[Pola]] | [[Puerto Galera]] | [[Roxas (Mindoro)|Roxas]] | [[San Teodoro (Mindoro)|San Teodoro]] | [[Socorro (Mindoro)|Socorro]] | [[Victoria (Mindoro)|Victoria]]  
-|}
-</div>
-<noinclude>
+{{Navbox
+|name = Oriental Mindoro
+|title = Saray [[:Category:Saray siyudad na Filipinas|siyudad]] san [[:Category:Saray baley na Filipinas|baley]] na [[Oriental Mindoro]]
+|state = {{{state|autocollapse}}}
+|listclass = hlist
+|group1 = Saray baley
+|list1 = 
+* [[Baco, Oriental Mindoro|Baco]]
+* [[Bansud, Oriental Mindoro|Bansud]]
+* [[Bongabong, Oriental Mindoro|Bongabong]]
+* [[Bulalacao, Oriental Mindoro|Bulalacao]]
+* [[Gloria, Oriental Mindoro|Gloria]]
+* [[Mansalay, Oriental Mindoro|Mansalay]]
+* [[Naujan, Oriental Mindoro|Naujan]]
+* [[Pinamalayan, Oriental Mindoro|Pinamalayan]]
+* [[Pola, Oriental Mindoro|Pola]]
+* [[Puerto Galera, Oriental Mindoro|Puerto Galera]]
+* [[Roxas, Oriental Mindoro|Roxas]]
+* [[San Teodoro, Oriental Mindoro|San Teodoro]]
+* [[Socorro, Oriental Mindoro|Socorro]]
+* [[Victoria, Oriental Mindoro|Victoria]]
+|group2 = Saray siyudad
+|list2 = 
+* [[Calapan]]
+}}<noinclude>
+[[Category:Saray baley na Oriental Mindoro| ]]
 </noinclude>
