--- a/Template:Quezon.mw
+++ b/Template:Quezon.mw
@@ -1,13 +1,53 @@
-<div style="text-align: center; clear:both; margin: 1.5em 0em">
-{| id="toc" style="margin: auto; line-height: 1.5; font-size: smaller; text-align: left;"
-|-
-| colspan="2" style="background:#ccccff; font-size: larger;" align="center" | '''Saray [[siyudad]] tan [[baley]] na [[Quezon]]'''
-|-
-|style="padding:0px 5px" align="right"|'''Saray Siyudad:''' 
-|style="padding:0px 5px" | [[Lucena, Quezon|Lucena]] | [[Siyudad na Tayabas|Tayabas]]
-|-
-|style="padding:0px 5px" align="right"|'''Saray Baley:''' 
-|style="padding:0px 5px" | [[Agdangan, Quezon|Agdangan]] | [[Alabat, Quezon|Alabat]] | [[Atimonan, Quezon|Atimonan]] | [[Buenavista, Quezon|Buenavista]] | [[Burdeos, Quezon|Burdeos]] | [[Calauag, Quezon|Calauag]] | [[Candelaria, Quezon|Candelaria]] | [[Catanauan, Quezon|Catanauan]] | [[Dolores, Quezon|Dolores]] | [[General Luna, Quezon|General Luna]] | [[General Nakar, Quezon|General Nakar]] | [[Guinayangan, Quezon|Guinayangan]] | [[Gumaca, Quezon|Gumaca]] | [[Infanta, Quezon|Infanta]] | [[Jomalig, Quezon|Jomalig]] | [[Lopez, Quezon|Lopez]] | [[Lucban, Quezon|Lucban]] | [[Macalelon, Quezon|Macalelon]] | [[Mauban, Quezon|Mauban]] | [[Mulanay, Quezon|Mulanay]] | [[Padre Burgos, Quezon|Padre Burgos]] | [[Pagbilao, Quezon|Pagbilao]] | [[Panukulan, Quezon|Panukulan]] | [[Patnanungan, Quezon|Patnanungan]] | [[Perez, Quezon|Perez]] | [[Pitogo, Quezon|Pitogo]] | [[Plaridel, Quezon|Plaridel]] | [[Polillo, Quezon|Polillo]] | [[Quezon, Quezon|Quezon]] | [[Real, Quezon|Real]] | [[Sampaloc, Quezon|Sampaloc]] | [[San Andres, Quezon|San Andres]] | [[San Antonio, Quezon|San Antonio]] | [[San Francisco, Quezon|San Francisco]] | [[San Narciso, Quezon|San Narciso]] | [[Sariaya, Quezon|Sariaya]] | [[Tagkawayan, Quezon|Tagkawayan]] | [[Tiaong, Quezon|Tiaong]] | [[Unisan, Quezon|Unisan]] 
-|}
-</div><noinclude>
+{{Navbox
+|name = Quezon
+|title = Saray [[:Category:Saray siyudad na Filipinas|siyudad]] san [[:Category:Saray baley na Filipinas|baley]] na [[Quezon]]
+|state = {{{state|autocollapse}}}
+|listclass = hlist
+|group1 = Saray baley
+|list1 = 
+* [[Agdangan, Quezon|Agdangan]]
+* [[Alabat, Quezon|Alabat]]
+* [[Atimonan, Quezon|Atimonan]]
+* [[Buenavista, Quezon|Buenavista]]
+* [[Burdeos, Quezon|Burdeos]]
+* [[Calauag, Quezon|Calauag]]
+* [[Candelaria, Quezon|Candelaria]]
+* [[Catanauan, Quezon|Catanauan]]
+* [[Dolores, Quezon|Dolores]]
+* [[General Luna, Quezon|General Luna]]
+* [[General Nakar, Quezon|General Nakar]]
+* [[Guinayangan, Quezon|Guinayangan]]
+* [[Gumaca, Quezon|Gumaca]]
+* [[Infanta, Quezon|Infanta]]
+* [[Jomalig, Quezon|Jomalig]]
+* [[Lopez, Quezon|Lopez]]
+* [[Lucban, Quezon|Lucban]]
+* [[Macalelon, Quezon|Macalelon]]
+* [[Mauban, Quezon|Mauban]]
+* [[Mulanay, Quezon|Mulanay]]
+* [[Padre Burgos, Quezon|Padre Burgos]]
+* [[Pagbilao, Quezon|Pagbilao]]
+* [[Panukulan, Quezon|Panukulan]]
+* [[Patnanungan, Quezon|Patnanungan]]
+* [[Perez, Quezon|Perez]]
+* [[Pitogo, Quezon|Pitogo]]
+* [[Plaridel, Quezon|Plaridel]]
+* [[Polillo, Quezon|Polillo]]
+* [[Quezon, Quezon|Quezon]]
+* [[Real, Quezon|Real]]
+* [[Sampaloc, Quezon|Sampaloc]]
+* [[San Andres, Quezon|San Andres]]
+* [[San Antonio, Quezon|San Antonio]]
+* [[San Francisco, Quezon|San Francisco]]
+* [[San Narciso, Quezon|San Narciso]]
+* [[Sariaya, Quezon|Sariaya]]
+* [[Tagkawayan, Quezon|Tagkawayan]]
+* [[Tiaong, Quezon|Tiaong]]
+* [[Unisan, Quezon|Unisan]]
+|group2 = Saray siyudad
+|list2 = 
+* [[Siyudad na Tayabas]]
+* [[Lucena, Filipinas|Lucena]] 
+}}<noinclude>
+[[Category:Saray baley na Quezon| ]]
 </noinclude>
