--- a/Template:Rizal.mw
+++ b/Template:Rizal.mw
@@ -1,14 +1,26 @@
-<div style="text-align: center; clear:both; margin: 1.5em 0em">
-{| id="toc" style="margin: auto; line-height: 1.5; font-size: smaller; text-align: left;"
-|-
-| colspan="2" style="background:#ccccff; font-size: larger;" align="center" | '''Saray [[siyudad]] tan [[baley]] ed  [[Rizal]]'''
-|-
-|style="padding:0px 5px" align="right"|'''Siyudad:''' 
-|style="padding:0px 5px" | [[Antipolo]]
-|-
-|style="padding:0px 5px" align="right"|'''Baley:''' 
-|style="padding:0px 5px" | [[Angono, Rizal|Angono]] | [[Baras, Rizal|Baras]] | [[Binangonan, Rizal|Binangonan]] | [[Cainta, Rizal|Cainta]] | [[Cardona, Rizal|Cardona]] | [[Jalajala, Rizal|Jalajala]] | [[Morong, Rizal|Morong]] | [[Pililla, Rizal|Pililla]] | [[Rodriguez, Rizal|Rodriguez]] | [[San Mateo, Rizal|San Mateo]] | [[Tanay, Rizal|Tanay]] | [[Taytay, Rizal|Taytay]] | [[Teresa, Rizal|Teresa]]
-|}
-</div>
-<noinclude>
+{{Navbox
+|name = Rizal
+|title = Saray [[:Category:Saray siyudad na Filipinas|siyudad]] san [[:Category:Saray baley na Filipinas|baley]] na [[Rizal]]
+|state = {{{state|autocollapse}}}
+|listclass = hlist
+|group1 = Saray baley
+|list1 = 
+* [[Angono, Rizal|Angono]]
+* [[Baras, Rizal|Baras]]
+* [[Binangonan, Rizal|Binangonan]]
+* [[Cainta, Rizal|Cainta]]
+* [[Cardona, Rizal|Cardona]]
+* [[Jalajala]]
+* [[Morong, Rizal|Morong]]
+* [[Pililla, Rizal|Pililla]]
+* [[Rodriguez, Rizal|Rodriguez]]
+* [[San Mateo, Rizal|San Mateo]]
+* [[Tanay, Rizal|Tanay]]
+* [[Taytay, Rizal|Taytay]]
+* [[Teresa, Rizal|Teresa]]
+|group2 = Saray siyudad
+|list2 = 
+* [[Antipolo]] 
+}}<noinclude>
+[[Category:Saray baley na Rizal| ]]
 </noinclude>
