--- a/Template:Romblon.mw
+++ b/Template:Romblon.mw
@@ -1,8 +1,27 @@
-<div style="text-align: center; clear:both; margin: 1.5em 0em">
-{| id="toc" style="margin: auto; line-height: 1.5; font-size: smaller; text-align: left;"
-|-
-| colspan="2" style="background:#ccccff; font-size: larger;" align="center" | '''Saray baley ed [[Romblon]]'''
-|-
-|style="padding:0px 5px"; align="center"| [[Alcantara, Romblon|Alcantara]] | [[Banton, Romblon|Banton]] | [[Cajidiocan, Romblon|Cajidiocan]] | [[Calatrava, Romblon|Calatrava]] | [[Concepcion, Romblon|Concepcion]] | [[Corcuera, Romblon|Corcuera]] | [[Ferrol, Romblon|Ferrol]] | [[Looc, Romblon|Looc]] | [[Magdiwang, Romblon|Magdiwang]] | [[Odiongan, Romblon|Odiongan]] | [[Romblon, Romblon|Romblon]] | [[San Agustin, Romblon|San Agustin]] | [[San Andres, Romblon|San Andres]] | [[San Fernando, Romblon|San Fernando]] | [[San Jose, Romblon|San Jose]] | [[Santa Fe, Romblon|Santa Fe]] | [[Santa Maria, Romblon|Santa Maria]] 
-|}
-</div>
+{{Navbox
+|name = Romblon
+|title = Saray [[:Category:Saray baley na Filipinas|baley]] na [[Romblon]]
+|state = {{{state|autocollapse}}}
+|listclass = hlist
+|group1 = Saray baley
+|list1 = 
+* [[Alcantara, Romblon|Alcantara]]
+* [[Banton, Romblon|Banton]]
+* [[Cajidiocan, Romblon|Cajidiocan]]
+* [[Calatrava, Romblon|Calatrava]]
+* [[Concepcion, Romblon|Concepcion]]
+* [[Corcuera, Romblon|Corcuera]]
+* [[Ferrol, Romblon|Ferrol]]
+* [[Looc, Romblon|Looc]]
+* [[Magdiwang, Romblon|Magdiwang]]
+* [[Odiongan, Romblon|Odiongan]]
+* [[Romblon, Romblon|Romblon]]
+* [[San Agustin, Romblon|San Agustin]]
+* [[San Andres, Romblon|San Andres]]
+* [[San Fernando, Romblon|San Fernando]]
+* [[San Jose, Romblon|San Jose]]
+* [[Santa Fe, Romblon|Santa Fe]]
+* [[Santa Maria, Romblon|Santa Maria]]
+}}<noinclude>
+[[Category:Saray baley na Romblon| ]]
+</noinclude>
