--- a/Template:Sarangani.mw
+++ b/Template:Sarangani.mw
@@ -1,8 +1,17 @@
-<div style="text-align: center; clear:both; margin: 1.5em 0em">
-{| id="toc" style="margin: auto; line-height: 1.5; font-size: smaller; text-align: left;"
-|-
-| colspan="2" style="background:#ccccff; font-size: larger;" align="center" | '''Saray [[Saray baley na Filipinas|baley]] na [[Sarangani]]'''
-|-
-|style="padding:0px 5px"; align="center"| [[Alabel, Sarangani|Alabel]] | [[Glan, Sarangani|Glan]] | [[Kiamba, Sarangani|Kiamba]] | [[Maasim, Sarangani|Maasim]] | [[Maitum, Sarangani|Maitum]] | [[Malapatan, Sarangani|Malapatan]] | [[Malungon, Sarangani|Malungon]]
-|}
-</div>
+{{Navbox
+|name = Sarangani
+|title = Saray [[:Category:Saray baley na Filipinas|baley]] na [[Sarangani]]
+|state = {{{state|autocollapse}}}
+|listclass = hlist
+|group1 = Saray baley
+|list1 = 
+* [[Alabel, Sarangani|Alabel]]
+* [[Glan, Sarangani|Glan]]
+* [[Kiamba, Sarangani|Kiamba]]
+* [[Maasim, Sarangani|Maasim]]
+* [[Maitum, Sarangani|Maitum]]
+* [[Malapatan, Sarangani|Malapatan]]
+* [[Malungon, Sarangani|Malungon]]
+}}<noinclude>
+[[Category:Saray baley na Sarangani| ]]
+</noinclude>
