--- a/Template:Tarlac.mw
+++ b/Template:Tarlac.mw
@@ -1,12 +1,30 @@
-<div style="text-align: center; clear:both; margin: 1.5em 0em">
-{| id="toc" style="margin: auto; line-height: 1.5; font-size: smaller; text-align: left;"
-|-
-| colspan="2" style="background:#ccccff; font-size: larger;" align="center" | '''Saray [[Siyudad]] san [[Baley]] na [[Tarlac]]'''
-|-
-|style="padding:0px 5px" align="right"|'''Saray Siyudad:''' 
-|style="padding:0px 5px" | [[Siyudad na Tarlac|Tarlac]]  
-|-
-|style="padding:0px 5px" align="right"|'''Saray Baley:''' 
-|style="padding:0px 5px" | [[Anao, Tarlac|Anao]] | [[Bamban, Tarlac|Bamban]] | [[Camiling, Tarlac|Camiling]] | [[Capas, Tarlac|Capas]] | [[Concepcion, Tarlac|Concepcion]] | [[Gerona, Tarlac|Gerona]] | [[La Paz, Tarlac|La Paz]] | [[Mayantoc, Tarlac|Mayantoc]] | [[Moncada, Tarlac|Moncada]] | [[Paniqui, Tarlac|Paniqui]] | [[Pura, Tarlac|Pura]] | [[Ramos, Tarlac|Ramos]] | [[San Clemente, Tarlac|San Clemente]] | [[San Jose, Tarlac|San Jose]] | [[San Manuel, Tarlac|San Manuel]] | [[Santa Ignacia, Tarlac|Santa Ignacia]] | [[Victoria, Tarlac|Victoria]] 
-|}
-</div>
+{{Navbox
+|name = Tarlac
+|title = Saray [[:Category:Saray siyudad na Filipinas|siyudad]] san [[:Category:Saray baley na Filipinas|baley]] na [[Tarlac]]
+|state = {{{state|autocollapse}}}
+|listclass = hlist
+|group1 = Saray baley
+|list1 = 
+* [[Anao, Tarlac|Anao]]
+* [[Bamban, Tarlac|Bamban]]
+* [[Camiling, Tarlac|Camiling]]
+* [[Capas, Tarlac|Capas]]
+* [[Concepcion, Tarlac|Concepcion]]
+* [[Gerona, Tarlac|Gerona]]
+* [[La Paz, Tarlac|La Paz]]
+* [[Mayantoc, Tarlac|Mayantoc]]
+* [[Moncada, Tarlac|Moncada]]
+* [[Paniqui, Tarlac|Paniqui]]
+* [[Pura, Tarlac|Pura]]
+* [[Ramos, Tarlac|Ramos]]
+* [[San Clemente, Tarlac|San Clemente]]
+* [[San Jose, Tarlac|San Jose]]
+* [[San Manuel, Tarlac|San Manuel]]
+* [[Santa Ignacia, Tarlac|Santa Ignacia]]
+* [[Victoria, Tarlac|Victoria]]
+|group2 = Siyudad
+|list2 = 
+* [[Siyudad na Tarlac]]
+}}<noinclude>
+[[Category:Saray baley na Tarlac| ]]
+</noinclude>
