--- a/Template:Zambales.mw
+++ b/Template:Zambales.mw
@@ -1,12 +1,26 @@
-<div style="text-align: center; clear:both; margin: 1.5em 0em">
-{| id="toc" style="margin: auto; line-height: 1.5; font-size: smaller; text-align: left;"
-|-
-| colspan="2" style="background:#ccccff; font-size: larger;" align="center" | '''Saray [[Siyudad]] san [[Baley]] na [[Zambales]]'''
-|-
-|style="padding:0px 5px" align="right"|'''Saray Siyudad:''' 
-|style="padding:0px 5px" | [[Siyudad na Olongapo]]
-|-
-|style="padding:0px 5px" align="right"|'''Saray Baley:''' 
-|style="padding:0px 5px" | [[Botolan, Zambales|Botolan]] | [[Cabangan, Zambales|Cabangan]] | [[Candelaria, Zambales|Candelaria]] | [[Castillejos, Zambales|Castillejos]] | [[Iba, Zambales|Iba]] | [[Masinloc, Zambales|Masinloc]] | [[Palauig, Zambales|Palauig]] | [[San Antonio, Zambales|San Antonio]] | [[San Felipe, Zambales|San Felipe]] | [[San Marcelino, Zambales|San Marcelino]] | [[San Narciso, Zambales|San Narciso]] | [[Santa Cruz, Zambales|Santa Cruz]] | [[Subic, Zambales|Subic]]
-|}
-</div>
+{{Navbox
+|name = Zambales
+|title = Saray [[:Category:Saray siyudad na Filipinas|siyudad]] san [[:Category:Saray baley na Filipinas|baley]] na [[Zambales]]
+|state = {{{state|autocollapse}}}
+|listclass = hlist
+|group1 = Saray baley
+|list1 = 
+* [[Botolan, Zambales|Botolan]]
+* [[Cabangan, Zambales|Cabangan]]
+* [[Candelaria, Zambales|Candelaria]]
+* [[Castillejos, Zambales|Castillejos]]
+* [[Iba, Zambales|Iba]]
+* [[Masinloc, Zambales|Masinloc]]
+* [[Palauig, Zambales|Palauig]]
+* [[San Antonio, Zambales|San Antonio]]
+* [[San Felipe, Zambales|San Felipe]]
+* [[San Marcelino, Zambales|San Marcelino]]
+* [[San Narciso, Zambales|San Narciso]]
+* [[Santa Cruz, Zambales|Santa Cruz]]
+* [[Subic, Zambales|Subic]]
+|group2 = Siyudad
+|list2 = 
+* [[Olongapo]] 
+}}<noinclude>
+[[Category:Saray baley na Zambales| ]]
+</noinclude>
