--- a/Template:Zamboanga_del_Sur.mw
+++ b/Template:Zamboanga_del_Sur.mw
@@ -1,12 +1,41 @@
-<div style="text-align: center; clear:both; margin: 1.5em 0em">
-{| id="toc" style="margin: auto; line-height: 1.5; font-size: smaller; text-align: left;"
-|-
-| colspan="2" style="background:#ccccff; font-size: larger;" align="center" | '''Saray [[Saray siyudad na Pilipinas|Siyudad]] san [[Saray baley na Pilipinas|Baley]] na [[Zamboanga del Sur|Zamboanga del Sur]]'''
-|-
-|style="padding:0px 5px" align="right"|'''Saray siyudad:''' 
-|style="padding:0px 5px" | [[Pagadian]] | [[Siyudad na Zamboanga|Zamboanga]] 
-|-
-|style="padding:0px 5px" align="right"|'''Saray baley:''' 
-|style="padding:0px 5px" | [[Aurora, Zamboanga del Sur|Aurora]] | [[Bayog, Zamboanga del Sur|Bayog]] | [[Dimataling, Zamboanga del Sur|Dimataling]] | [[Dinas, Zamboanga del Sur|Dinas]] | [[Dumalinao, Zamboanga del Sur|Dumalinao]] | [[Dumingag, Zamboanga del Sur|Dumingag]] | [[Guipos, Zamboanga del Sur|Guipos]] | [[Josefina, Zamboanga del Sur|Josefina]] | [[Kumalarang, Zamboanga del Sur|Kumalarang]] | [[Labangan, Zamboanga del Sur|Labangan]] | [[Lakewood, Zamboanga del Sur|Lakewood]] | [[Lapuyan, Zamboanga del Sur|Lapuyan]] | [[Mahayag, Zamboanga del Sur|Mahayag]] | [[Margosatubig, Zamboanga del Sur|Margosatubig]] | [[Midsalip, Zamboanga del Sur|Midsalip]] | [[Molave, Zamboanga del Sur|Molave]] | [[Pitogo, Zamboanga del Sur|Pitogo]] | [[Ramon Magsaysay, Zamboanga del Sur|Ramon Magsaysay]] |  | [[San Miguel, Zamboanga del Sur|San Miguel]] | [[San Pablo, Zamboanga del Sur|San Pablo]] | [[Sominot, Zamboanga del Sur|Sominot]] | [[Tabina, Zamboanga del Sur|Tabina]] | [[Tambulig, Zamboanga del Sur|Tambulig]] | [[Tigbao, Zamboanga del Sur|Tigbao]] | [[Tukuran, Zamboanga del Sur|Tukuran]] | [[Vincenzo A. Sagun, Zamboanga del Sur|Vincenzo A. Sagun]]
-|}
-</div>
+{{Navbox
+|name = Zamboanga del Sur
+|image =
+|title = Saray [[:Category:Saray siyudad na Filipinas|siyudad]] san [[:Category:Saray baley na Filipinas|baley]] na [[Zamboanga del Sur]]
+|state = {{{state|autocollapse}}}
+|listclass = hlist
+|group1 = Saray baley
+|list1 = 
+* [[Aurora, Zamboanga del Sur|Aurora]]
+* [[Bayog, Zamboanga del Sur|Bayog]]
+* [[Dimataling, Zamboanga del Sur|Dimataling]]
+* [[Dinas, Zamboanga del Sur|Dinas]]
+* [[Dumalinao, Zamboanga del Sur|Dumalinao]]
+* [[Dumingag, Zamboanga del Sur|Dumingag]]
+* [[Guipos, Zamboanga del Sur|Guipos]]
+* [[Josefina, Zamboanga del Sur|Josefina]]
+* [[Kumalarang, Zamboanga del Sur|Kumalarang]]
+* [[Labangan, Zamboanga del Sur|Labangan]]
+* [[Lakewood, Zamboanga del Sur|Lakewood]]
+* [[Lapuyan, Zamboanga del Sur|Lapuyan]]
+* [[Mahayag, Zamboanga del Sur|Mahayag]]
+* [[Margosatubig, Zamboanga del Sur|Margosatubig]]
+* [[Midsalip, Zamboanga del Sur|Midsalip]]
+* [[Molave, Zamboanga del Sur|Molave]]
+* [[Pitogo, Zamboanga del Sur|Pitogo]]
+* [[Ramon Magsaysay, Zamboanga del Sur|Ramon Magsaysay]]
+* [[San Miguel, Zamboanga del Sur|San Miguel]]
+* [[San Pablo, Zamboanga del Sur|San Pablo]]
+* [[Sominot, Zamboanga del Sur|Sominot]]
+* [[Tabina, Zamboanga del Sur|Tabina]]
+* [[Tambulig, Zamboanga del Sur|Tambulig]]
+* [[Tigbao, Zamboanga del Sur|Tigbao]]
+* [[Tukuran, Zamboanga del Sur|Tukuran]]
+* [[Vincenzo A. Sagun, Zamboanga del Sur|Vincenzo A. Sagun]]
+|group2 = Saray siyudad
+|list2 = 
+* [[Pagadian]]
+* [[Siyudad na Zamboanga]] 
+}}<noinclude>
+[[Category:Saray baley na Zamboanga del Sur| ]]
+</noinclude>
