--- a/San_Jose_de_Buenavista.mw
+++ b/San_Jose_de_Buenavista.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator antique san jose.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Jose, Antique
 | 1990 = 40267		
@@ -44,10 +45,14 @@ Say '''San Jose''' et unaan ya klase baley ed luyag na [[Antique]], [[Pilipinas]
 * San Pedro
 * Supa
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Antique}}															
+{{Antique}}	
+														
 [[Category:Saray baley na Antique]]
