--- a/San_Remigio,_Antique.mw
+++ b/San_Remigio,_Antique.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator antique san remigio.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Remigio, Antique
 | 1990 = 21682		
@@ -61,10 +62,14 @@ Say '''San Remigio''' et kumatlo ya klase baley ed luyag na [[Antique]], [[Pilip
 * Vilvar
 * Walker
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Antique}}															
+{{Antique}}	
+														
 [[Category:Saray baley na Antique]]
