--- a/Tobias_Fornier.mw
+++ b/Tobias_Fornier.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator antique tobias fornier.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tobias Fornier, Antique
 | 1990 = 25816		
@@ -66,10 +67,14 @@ Say '''Tobias Fornier''' et kumapat ya klase baley ed luyag na [[Antique]], [[Pi
 * Igcadac
 * Lindero
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Antique}}															
+{{Antique}}	
+														
 [[Category:Saray baley na Antique]]
