--- a/Pangantucan.mw
+++ b/Pangantucan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bukidnon pangantucan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pangantucan, Bukidnon
 | 1990 = 35777		
@@ -12,7 +13,6 @@
 | 2030 = 		
 |}}
 Say '''Pangantucan''' et unaan ya klase baley ed luyag na [[Bukidnon]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 48,775 totoo. Walay kabaleg tan sukat to ya 461.72 sq. km. Sikato et walad kumapat ya distrito. Say zip code to et 8717.	
-
 
 ==Saray barangay==
 * Adtuyon
@@ -35,10 +35,14 @@ Say '''Pangantucan''' et unaan ya klase baley ed luyag na [[Bukidnon]], [[Pilipi
 * Poblacion
 * Portulin
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bukidnon}}															
+{{Bukidnon}}	
+														
 [[Category:Saray baley na Bukidnon]]
