--- a/Quezon,_Bukidnon.mw
+++ b/Quezon,_Bukidnon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bukidnon quezon.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Quezon, Bukidnon
 | 1990 = 70566		
@@ -12,7 +13,6 @@
 | 2030 = 		
 |}}
 Say '''Quezon''' et unaan ya klase baley ed luyag na [[Bukidnon]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 94,584 totoo. Walay kabaleg tan sukat to ya 626.86 sq. km. Sikato et walad kumatlo ya distrito. Say zip code to et 8715.	
-
 
 ==Saray barangay==
 * Butong
@@ -47,10 +47,14 @@ Say '''Quezon''' et unaan ya klase baley ed luyag na [[Bukidnon]], [[Pilipinas]]
 * Santa Cruz
 * Santa Filomena
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bukidnon}}															
+{{Bukidnon}}	
+														
 [[Category:Saray baley na Bukidnon]]
